Fix #1 Footer section align system

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,13 +1,18 @@
+
 footer {
   margin-top: calc(var(--between-section-margin) * 3);
 }
 
 .footer-container {
-
   display: flex;
   background-color: var(--main-bg-color);
   padding: var(--padding-section);
-  gap: 0 20%;
+  justify-content: space-between;
+  /* ... */
+}
+
+section:last-child {
+  margin-right: 20%;
 }
 
 .footer-container section ul li  {
